Publish Ranting post.

--- a/_posts/2023-12-23-ranting.md
+++ b/_posts/2023-12-23-ranting.md
@@ -2,10 +2,22 @@
 layout: post
 title: Ranting
 date: 2023-12-23 23:54 +0800
-description:
-image: 
-category:
-tags:
-published: false
-sitemap: false
+description: Ranting is a link-in-bio platform that allows any Malaysian creators to showcase their work and social media profiles in a single, easy-to-share link.
+image: /assets/img/posts/3500703.png
+category: Work
+tags: [rails,mvp,ranting]
+published: true
+sitemap: true
 ---
+Ranting is a link-in-bio platform that allows any Malaysian creators to showcase their work and social media profiles in a single, easy-to-share link. 
+      
+It is a platform that allows creators to add links to their website, blog, social media profiles, email address, and other online assets. It can be customized with a variety of colors, fonts, and images. Ranting is free to use for 30 days, and there are paid plans available for creators who need more features.
+Here are some of the features that make Ranting a good option for Malaysian creators:
+<ul>
+  <li>Personal dashboard for anything you need.</li>
+  <li>It supports the use of Malaysian e-Wallets.</li>
+  <li>It is designed with Malaysian creators in mind, so it is easy to use and navigate.</li>
+  <li>It is a reliable and secure platform.</li>
+</ul>
+
+It's still work in progress. Do check out the alpha build [here](https://ranting-mvp.onrender.com) and let me know what you think 😀✨
