--- a/_posts/2022-03-30-maya.md
+++ b/_posts/2022-03-30-maya.md
@@ -9,3 +9,5 @@ tags: [maya]
 published: false
 sitemap: false
 ---
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/haeEC00aPTM?si=rGZnG8eaSZWvLI1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
