--- a/_posts/2023-11-29-of-mlbb.md
+++ b/_posts/2023-11-29-of-mlbb.md
@@ -4,8 +4,8 @@ title: Of MLBB
 date: 2023-11-29 11:55 +0800
 description:
 image:
-category:
-tags:
+category: Balance
+tags: [writing]
 published: false
 sitemap: false
 ---
