--- a/_posts/2017-09-01-eezeejob.md
+++ b/_posts/2017-09-01-eezeejob.md
@@ -4,8 +4,8 @@ title: EezeeJob
 date: 2017-09-01 10:51 +0800
 description:
 image: https://blog.rudzainy.my/blog/wp-content/uploads/2019/05/eezeejob.png
-category:
-tags:
+category: Work
+tags: [web,project management]
 published: true
 sitemap: true
 ---
