--- a/_posts/2024-01-03-of-books.md
+++ b/_posts/2024-01-03-of-books.md
@@ -10,5 +10,19 @@ published: false
 sitemap: false
 ---
 
+### Stories
 - The Lost Symbols
+- Sherlock Holmes
+
+### Self
+- Design Sprint
+- Permanant Record
+
+### Comic
+- Doraemon
+- Dragon Ball
+- Dragon Quest
+- Naruto
+- Detective Conan
+- Kindaichi
 - 
