--- a/_posts/2023-12-23-ranting.md
+++ b/_posts/2023-12-23-ranting.md
@@ -21,3 +21,7 @@ Here are some of the features that make Ranting a good option for Malaysian crea
 </ul>
 
 It's still work in progress. Do check out the alpha build [here](https://ranting-mvp.onrender.com) and let me know what you think 😀✨
+
+## sini.la
+
+https://sini.la/ttceh
