--- a/_posts/2024-01-03-of-books.md
+++ b/_posts/2024-01-03-of-books.md
@@ -4,19 +4,23 @@ title: Of Books
 date: 2024-01-03 10:01 +0800
 description:
 image:
-category:
-tags:
-published: false
-sitemap: false
+category: [Balance]
+tags: [reading,books]
+published: true
+sitemap: true
 ---
 
 ### Stories
+- Angels and Demons
 - The Lost Symbols
+- Inferno
+- Origins
 - Sherlock Holmes
 
 ### Self
 - Design Sprint
 - Permanant Record
+- A History of God
 
 ### Comic
 - Doraemon
